--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "gulp-minify-css": "^1.2.3",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7"
+  },
+  "dependencies": {
+    "gulp-install": "^0.6.0"
   }
 }
